--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -14,9 +14,9 @@
 					<li>Templates
 						<ul>
 							{% for my_page in site.pages %}
-							{% if my_page.title %}
-							<li><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-							{% endif %}
+								{% if my_page.template == true %}
+								<li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
+								{% endif %}
 							{% endfor %}
 						</ul>
 					</li>
