--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -11,7 +11,7 @@
 					<li><a href="atoms.html">Atoms</a></li>
 					<li><a href="molecules.html">Molecules</a></li>
 					<li><a href="organisms.html">Organisms</a></li>
-					<li>Templates
+					<li>Templates:
 						<ul>
 							{% for my_page in site.pages %}
 								{% if my_page.template == true %}
@@ -22,7 +22,7 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="viewport"><span id="w"></span><span id="h"></span></div>
+			<div class="dev-viewport"><span id="w"></span><span id="h"></span></div>
 		</header>
 		
 		<div class="page-content">
