--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -22,7 +22,7 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="dev-viewport"><span id="w"></span><span id="h"></span></div>
+			<div class="viewport-size"><span id="w"></span><span id="h"></span></div>
 		</header>
 		
 		<div class="page-content">
@@ -31,7 +31,11 @@
 			</div>
 		</div>
 		
-		{% include footer.html %}
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script>window.jQuery || document.write('<script src="js/jquery-3.3.1.min.js"><\/script>')</script>
+		<script src="js/dev.js"></script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 		
 	</body>
 
