--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -1,43 +1,35 @@
-.dev-viewport {
-  background-color: rgba(255, 0, 0, 0.5);
-  border-bottom-right-radius: 8px;
-  color: #fff;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 2em;
-  left: 0;
-  text-align: center;
-  top: 0;
-  padding: 3px 5px 0 5px;
-  position: fixed;
-  z-index: 100;
-}
-
-.dev-nav {
-  background-color: pink;
-  left: 0;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  text-align: center;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-
-.dev-nav li {
-  display: inline-block;
-  margin: 0 1rem;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Source+Sans+Pro:wght@300&display=swap");
 body {
   margin: 0;
 }
 
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+code {
+  font-family: 'Source Code Pro', monospace;
+}
+
 .atomic header {
   background-color: #81d064;
+  padding: .75em;
   position: fixed;
-  width: 100%;
+  text-transform: uppercase;
+  top: 0;
+  width: calc(100% - 1.5em);
+  z-index: 100;
+}
+
+.atomic header a {
+  color: #262626;
+}
+
+.atomic header ul {
+  float: left;
+  margin: 0;
+  padding: 0;
+  top: 50%;
 }
 
 .atomic header ul li {
@@ -46,10 +38,16 @@ body {
 
 .atomic header ul li ul {
   display: inline-block;
+  float: none;
   margin: 0;
   padding: 0;
 }
 
 .atomic header ul li ul li {
   margin-left: 0;
+}
+
+.atomic header .viewport-size {
+  float: right;
+  font-family: 'Source Code Pro', monospace;
 }
