--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -5,6 +5,7 @@ body {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  margin: 4em 2em 2em 2em;
 }
 
 code {
@@ -13,6 +14,7 @@ code {
 
 .atomic header {
   background-color: #81d064;
+  left: 0;
   padding: .75em;
   position: fixed;
   text-transform: uppercase;
@@ -34,17 +36,18 @@ code {
 
 .atomic header ul li {
   display: inline-block;
+  margin-right: .5em;
 }
 
 .atomic header ul li ul {
   display: inline-block;
   float: none;
-  margin: 0;
+  margin: 0 0 0 .5em;
   padding: 0;
 }
 
 .atomic header ul li ul li {
-  margin-left: 0;
+  margin: 0 .5em 0 0;
 }
 
 .atomic header .viewport-size {
