--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -22,9 +22,10 @@ code {
 .atomic {
 	header {
 		a {
-			color: $black;
+			color: #fff;
 		}
-		background-color: $green;
+		background-color: #262626;
+		color: #fff;
 		left: 0;
 		padding: .75em;
 		position: fixed;
@@ -54,6 +55,30 @@ code {
 		.viewport-size {
 			float: right;
 			font-family: 'Source Code Pro', monospace;
+		}
+	}
+}
+
+#atoms {
+	.color {
+		list-style-type: none;
+		margin: -.5em 0 0 -.5em;
+		padding: 0;
+		li {
+			display: inline-block;
+			border: 1px solid $black;
+			padding: 1em;
+			margin: .5em;
+			max-width: 50%;
+			width: calc(10% - 1em);
+			.name, .hex {
+				display: block;
+			}
+			.bkg {
+				margin-top: .35em;
+				height: 4em;
+				width: 100%;
+			}
 		}
 	}
 }
