Building out Atoms template page

--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -28,21 +28,47 @@
 		
 		<section id="atoms">
 			<h2>Atoms</h2>
+			
+			<h3>Colors</h3>
+			<hr>
 			<ul class="color">
-				<li><span class="name">Black</span><span class="hex">#262626</span><div class="bkg" style="background-color:#262626;"></div></li>
-				<li><span class="name">White</span><span class="hex">#f9f9f9</span><div class="bkg" style="background-color:#f9f9f9;"></div></li>
-				<li><span class="name">Blue</span><span class="hex">#6bc7f2</span><div class="bkg" style="background-color:#6bc7f2;"></div></li>
-				<li><span class="name">Dark Blue</span><span class="hex">#57a9cf</span><div class="bkg" style="background-color:#57a9cf;"></div></li>
-				<li><span class="name">Green</span><span class="hex">#81d064</span><div class="bkg" style="background-color:#81d064;"></div></li>
-				<li><span class="name">Grey</span><span class="hex">#b4b4b4</span><div class="bkg" style="background-color:#b4b4b4;"></div></li>
-				<li><span class="name">Yellow</span><span class="hex">#f4d506</span><div class="bkg" style="background-color:#f4d506;"></div></li>
-				<li><span class="name">Red</span><span class="hex">#ff8888</span><div class="bkg" style="background-color:#ff8888;"></div></li>
-				<li><span class="name">Animated Graident</span><span class="hex">#404040</span><div class="bkg" style="animation: announcement 4s ease infinite;background: linear-gradient(328deg, #67a3ea, #705ac4);background-size: 400% 400%"></div></li>
-				<li><span class="name">Focus</span><span class="hex">#dbe4c6</span><div class="bkg" style="background-color:#dbe4c6;"></div></li>
-				<li><span class="name">Lightmode</span><span class="hex">#fdfdfd</span><div class="bkg" style="background-color:#fdfdfd;"></div></li>
-				<li><span class="name">Darkmode</span><span class="hex">#404040</span><div class="bkg" style="background-color:#404040;"></div></li>
-			<ul>
+				<li><div class="bkg" style="background-color:#262626;"></div><span class="name">Black</span><span class="hex">#262626</span></li>
+				<li><div class="bkg" style="background-color:#f9f9f9;"></div><span class="name">White</span><span class="hex">#f9f9f9</span></li>
+				<li><div class="bkg" style="background-color:#6bc7f2;"></div><span class="name">Blue</span><span class="hex">#6bc7f2</span></li>
+				<li><div class="bkg" style="background-color:#57a9cf;"></div><span class="name">Dark Blue</span><span class="hex">#57a9cf</span></li>
+				<li><div class="bkg" style="background-color:#81d064;"></div><span class="name">Green</span><span class="hex">#81d064</span></li>
+				<li><div class="bkg" style="background-color:#b4b4b4;"></div><span class="name">Grey</span><span class="hex">#b4b4b4</span></li>
+				<li><div class="bkg" style="background-color:#f4d506;"></div><span class="name">Yellow</span><span class="hex">#f4d506</span></li>
+				<li><div class="bkg" style="background-color:#ff8888;"></div><span class="name">Red</span><span class="hex">#ff8888</span></li>
+				<li><div class="bkg" style="animation: announcement 4s ease infinite;background: linear-gradient(328deg, #67a3ea, #705ac4);background-size: 400% 400%"></div><span class="name">Animated Gradient</span><span class="hex">#404040</span></li>
+				<li><div class="bkg" style="background-color:#dbe4c6;"></div><span class="name">Focus</span><span class="hex">#dbe4c6</span></li>
+				<li><div class="bkg" style="background-color:#fdfdfd;"></div><span class="name">Lightmode White</span><span class="hex">#fdfdfd</span></li>
+				<li><div class="bkg" style="background-color:#404040;"></div><span class="name">Darkmode Black</span><span class="hex">#404040</span></li>
+			</ul>
+				
+			<h3>Fonts</h3>
+			<hr>
+			<ul class="fonts">
+				<li>Body Font Regular: Freight Sans Pro</li>
+				<li style="font-style: italic;">Body Font Italic: Freight Sans Pro</li>
+				<li style="font-weight: 500;">Body Font Bold: Freight Sans Pro</li>
+				<li class="intro" style="font-weight: 400;">Intro Font: Vista Slab Italic</li>
+				<li class="headline" style="">Headline Font: Vista Slab Italic</li>
+			</ul>
+		
+			<h3>Text</h3>
+			<hr>
+			<ul class="icons">
+				<li></li>
+			</ul>
+			
+			<h3>Icons</h3>
+			<hr>
+			<ul class="icons">
+				<li></li>
+			</ul>
 		</section>
+
 		
 		<!--
 		<div class="page-content">
