--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -8,7 +8,9 @@ body {
 	margin: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Source+Sans+Pro:wght@300;600&display=swap');
+
+@include load-font;
 
 body {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -60,17 +62,33 @@ code {
 }
 
 #atoms {
+	h3 {
+		margin-bottom: 0;
+	}
+	hr {
+		border: 0;
+		height: 0;
+		border-top: 2px solid rgba(0, 0, 0, 0.1);
+		border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+	}
+	ul {
+		margin: 0 0 3em 0;
+	}
 	.color {
 		list-style-type: none;
-		margin: -.5em 0 0 -.5em;
+		margin-left: -.5em;
 		padding: 0;
 		li {
 			display: inline-block;
 			border: 1px solid $black;
-			padding: 1em;
+			padding: .65em .75em .75em .75em;
 			margin: .5em;
 			max-width: 50%;
 			width: calc(10% - 1em);
+			.name {
+				font-weight: 600;
+				margin-top: .35em;
+			}
 			.name, .hex {
 				display: block;
 			}
@@ -79,6 +97,19 @@ code {
 				height: 4em;
 				width: 100%;
 			}
+		}
+	}
+	.fonts {
+		color: $black;
+		font-size: 1.25em;
+		list-style-type: none;
+		@include font-body;
+		padding: 0;
+		.headline {
+			@include font-headline;
+		}
+		.intro {
+			@include font-intro-italic;
 		}
 	}
 }
