Addling listst to amtoms

--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -55,11 +55,96 @@
 				<li class="intro" style="font-weight: 400;">Intro Font: Vista Slab Italic</li>
 				<li class="headline" style="">Headline Font: Vista Slab Italic</li>
 			</ul>
-		
-			<h3>Text</h3>
+			
+			<h3>In-Line Elements</h3>
 			<hr>
-			<ul class="icons">
-				<li></li>
+			<ul class="in-line">
+				<li><a href="#">This is a text link</a></li>
+				<li><strong>Strong is used to indicate strong importance.</strong></li>
+				<li><em>This text has added emphasis.</em></li>
+				<li>The <b>b element</b> is stylistically different text from normal text, without any special importance.</li>
+				<li>The <i>i element</i> is text that is set off from the normal text.</li>
+				<li>The <u>u element</u> is text with an unarticulated, though explicitly rendered, non-textual annotation.</li>
+				<li><del>This text is deleted,</del> and <ins>this text is inserted.</ins></li>
+				<li><s>This text has a strikethrough</s></li>
+				<li>This is an example of Superscript<sup>®</sup>.</li>
+				<li>Subscript for things like H<sub>2</sub>0.</li>
+				<li><small>This small text is small for for fine print, etc.</small></li>
+				<li><q cite="https://developer.mozilla.org/en-US/docs/HTML/Element/q">This text is a short inline quotation.</q></li>
+				<li><cite>This is a citation.</cite></li>
+				<li>The <dfn>dfn element</dfn> indicated a definition.</li>
+				<li>The <mark>mark element</mark> indicates a highlight.</li>
+				<li><code>This is what inline code looks like.</code></li>
+			</ul>
+
+		
+			<h3>Headlines with Copy</h3>
+			<hr>
+			<ul class="headlines-with-copy">
+				<li>
+					<span class="headline-tag">h1</span>
+					<h1>Lessons Learned Hosting Revision Path from Diversity to Design with Maurice Cherry</h1>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+				<li>
+					<span class="copy-tag">h2</span>
+					<h2>Episode Links</h2>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+				<li>
+					<span class="copy-tag">h3</span>
+					<h3>Episode Links</h3>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+				<li>
+					<span class="copy-tag">h4</span>
+					<h4>Episode Links</h4>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+				<li>
+					<span class="copy-tag">h5</span>
+					<h5>Episode Links</h5>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+				<li>
+					<span class="copy-tag">h6</span>
+					<h6>Episode Links</h6>
+					<p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+					<p>A paragraph typically consists of a unifying main point, thought, or idea accompanied by supporting details. The non-fiction paragraph usually begins with the general and moves towards the more specific so as to advance an argument or point of view. Each paragraph builds on what came before and lays the ground or run the length of multiple pages, and may consist of one or many sentences.</p> 
+				</li>
+			</ul>
+			
+			<h3>Lists</h3>
+			<hr>
+			<ul class="lists">
+				<li>
+					<h4>Unordered List</h4>
+					<ul class="list-ul">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</li>
+				<li>
+					<h4>Ordered List</h4>
+					<ol class="list-ol">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul> 
+				</li>
+				<li>
+					<ul class="list-ul">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul> 
+				</li>
 			</ul>
 			
 			<h3>Icons</h3>
