--- a/_scss/_atoms.scss
+++ b/_scss/_atoms.scss
@@ -48,3 +48,7 @@ $darkmode: #404040;
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
+h1, h2, h3, h4, h5 {
+	@include font-headline;
+}
