--- a/_scss/main.css
+++ b/_scss/main.css
@@ -533,6 +533,11 @@ textarea {
   100% {
     background-position: 0% 50%; } }
 
+h1, h2, h3, h4, h5 {
+  font-family: vista-slab, serif;
+  font-weight: 700;
+  font-style: italic; }
+
 /*
 
 @font-face {
