Adding faux content

--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -125,25 +125,44 @@
 				<li>
 					<h4>Unordered List</h4>
 					<ul class="list-ul">
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>An unordered list is used when list items do not have any particular order. An unordered list is created with the <code&gt;</code>&lt;ul&gt;</code> tag.</li>
+						<li><code&gt;</code>&lt;ul&gt;</code> tag also is a two sided tag and closed with <code&gt;</code>&lt;/ul&gt;</code> tag.</li>
+						<li>Like an ordered-list, an item for unordered list is listed with the <code&gt;</code>&lt;li&gt;</code> tag.</li>
+						<li>
+							<ul>
+								<li>To create a sub list, we will list start with the <code&gt;</code>&lt;ul&gt;</code> tag.</li>
+								<li>Next, we will use the <code&gt;</code>&lt;li&gt;</code> tag to list the first item and <code&gt;</code>&lt;/li&gt;</code> to end the first item.</li>
+								<li>Similarly, we will create the rest of the list items with the <code&gt;</code>&lt;li&gt;</code> and <code&gt;</code>&lt;/li&gt;</code> tag.</li>
+							</ul>
+						</li>
+						<li>Just as you can change the numbering style for an ordered list, you can change the default bullet style for an unordered list.</li>
 					</ul>
 				</li>
 				<li>
 					<h4>Ordered List</h4>
 					<ol class="list-ol">
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>An ordered list is a numbered list. An ordered list can be used whenever a list requires sequence.</li>
+						<li>Let's assume we want to create an ordered list that displays how Tom likes six colors, the most important color is listed first and the next most important color is listed second, etc.</li>
+						<li>The <code>&lt;ol&gt;</code> tag starts an ordered list. The <code>&lt;ol&gt;</code> tag is a two-sided tag, which means that it also requires a closing tag <code>&lt;/ol&gt;</code>.</li>
+						<li>The <code>&lt;/ol&gt;</code> tag instructs the browser that the ordered list has ended. </li>
+						<li>Thus each item that needs to be placed in a list, should be placed inside the <code>&lt;li&gt;</code> and <code>&lt;/li&gt;</code> tag.
+						<li>The <code>&lt;ol&gt;</code> tag includes the type attribute that can be used to change numbering style for an ordered list. This attribute can be set to one of the following choices:</li>
+						<li><code>&lt;ol type="1"&gt;</code> Arabic numbers (1) - to create list using Arabic numbers. This is the default type for an ordered list.</li>
+						<li><code>&lt;ol type="A"&gt;</code> uppercase letters (A) - to create list using uppercase alphabet letters</li>
+						<li><code>&lt;ol type="a"&gt;</code> lowercase letters (a) - to create list using lowercase alphabet letters</li>
+						<li><code>&lt;ol type="I"&gt;</code> uppercase Roman numerals (I) - to create list using uppercase Roman Numerals</li>
+						<li><code>&lt;ol type="i"&gt;</code> lowercase Roman numerals (i) - to create list using lowercase Roman Numerals</li>
 					</ul> 
 				</li>
 				<li>
-					<ul class="list-ul">
-						<li></li>
-						<li></li>
-						<li></li>
-					</ul> 
+					<dl class="list-dl">
+						<dt></dt>
+						<dd></dd>
+						<dt></dt>
+						<dd></dd>
+						<dt></dt>
+						<dd></dd>
+					</dl> 
 				</li>
 			</ul>
 			
