--- a/_scss/_atoms.scss
+++ b/_scss/_atoms.scss
@@ -49,6 +49,6 @@ $darkmode: #404040;
     100%{background-position:0% 50%}
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
 	@include font-headline;
 }
