--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -15,6 +15,9 @@ body {
 body {
 	font-family: 'Source Sans Pro', sans-serif;
 	margin: 4em 2em 2em 2em;
+	h1, h2, h3, h4, h5, h6 {
+		font-family: 'Source Sans Pro', sans-serif;
+	}
 }
 
 code {
@@ -121,6 +124,9 @@ code {
 		@include font-body;
 		.headline-tag {
 			font-family: 'Source Code Pro', monospace;
+		}
+		h1, h2, h3, h4, h5, h6 {
+			@include font-headline;
 		}
 	}
 }
