--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -22,13 +22,15 @@ h1, h2, h3, h4, h5, h6 {
   font-style: italic; }
 
 body {
+  font-size: 20px;
   margin: 0; }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 4em 2em 2em 2em; }
   body h1, body h2, body h3, body h4, body h5, body h6 {
-    font-family: 'Source Sans Pro', sans-serif; }
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal; }
 
 code {
   font-family: 'Source Code Pro', monospace; }
@@ -71,7 +73,8 @@ code {
   border: 0;
   height: 0;
   border-top: 2px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 2px solid rgba(255, 255, 255, 0.3); }
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  margin-top: 0; }
 
 #atoms ul {
   margin: 0 0 3em 0; }
@@ -116,6 +119,11 @@ code {
     font-weight: 400;
     font-style: italic; }
 
+#atoms .in-line li {
+  font-family: freight-sans-pro, sans-serif;
+  font-weight: 300;
+  font-style: normal; }
+
 #atoms .headlines-with-copy {
   list-style-type: none;
   padding: 0;
@@ -123,8 +131,16 @@ code {
   font-weight: 300;
   font-style: normal; }
   #atoms .headlines-with-copy .headline-tag {
-    font-family: 'Source Code Pro', monospace; }
+    font-family: 'Source Code Pro', monospace;
+    font-variant-numeric: lining-nums; }
   #atoms .headlines-with-copy h1, #atoms .headlines-with-copy h2, #atoms .headlines-with-copy h3, #atoms .headlines-with-copy h4, #atoms .headlines-with-copy h5, #atoms .headlines-with-copy h6 {
     font-family: vista-slab, serif;
     font-weight: 700;
     font-style: italic; }
+
+#atoms .lists {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  #atoms .lists h3 {
+    margin-bottom: 0; }
