--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 		<link rel="manifest" href="site.webmanifest">
 		<link rel="apple-touch-icon" href="icon.png">
 		
-		<link rel="stylesheet" href="atomic/css/main.css">
+		<link rel="stylesheet" href="atomic/css/main.css"> <!-- Remove before site launch -->
 		<link rel="stylesheet" href="css/main.css">
 		
 		<link rel="stylesheet" href="devhelpers.css"> <!-- Remove before site launch -->
