--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -167,7 +167,9 @@
 			<h3>Icons</h3>
 			<hr>
 			<ul class="icons">
-				<li></li>
+				<li>{% include icon-close.html %}</li>
+				<li>{% include icon-play.html %}</li>
+				<li>{% include icon-sound.html %}</li>
 			</ul>
 		</section>
 		
