--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -170,8 +170,19 @@ code {
 		h3 {
 			margin-bottom: 0;
 		}
-		.lists-li {
-			
+	}
+	.icons {
+		list-style-type: none;
+		padding: 0;
+		li {
+			border: 1px solid $black;
+			display: inline-block;
+			margin-right: .5em;
+			padding: .5em;
+			width: 5%;
+			svg {
+				fill: $black;
+			}
 		}
 	}
 }
