--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -161,3 +161,15 @@ code {
   padding: 0; }
   #atoms .lists h3 {
     margin-bottom: 0; }
+
+#atoms .icons {
+  list-style-type: none;
+  padding: 0; }
+  #atoms .icons li {
+    border: 1px solid #262626;
+    display: inline-block;
+    margin-right: .5em;
+    padding: .5em;
+    width: 5%; }
+    #atoms .icons li svg {
+      fill: #262626; }
