--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -34,11 +34,11 @@ code {
 		background-color: #262626;
 		color: #fff;
 		left: 0;
-		padding: .75em;
+		padding: .75em 2em;
 		position: fixed;
 		text-transform: uppercase;
 		top: 0;
-		width: calc(100% - 1.5em);
+		width: calc(100% - 4em);
 		z-index: 100;
 		ul {
 			float: left;
@@ -67,8 +67,12 @@ code {
 }
 
 #atoms {
-	h3 {
-		margin-bottom: 0;
+	.atoms-heading {
+		font-size: 2.125em;
+	}
+	.atoms-sub-heading {
+		font-size: 1.5em;
+		margin-bottom: .25em;
 	}
 	hr {
 		border: 0;
@@ -76,9 +80,6 @@ code {
 		border-top: 2px solid rgba(0, 0, 0, 0.1);
 		border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 		margin-top: 0;
-	}
-	ul {
-		margin: 0 0 3em 0;
 	}
 	.color {
 		list-style-type: none;
