--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -39,11 +39,11 @@ code {
   background-color: #262626;
   color: #fff;
   left: 0;
-  padding: .75em;
+  padding: .75em 2em;
   position: fixed;
   text-transform: uppercase;
   top: 0;
-  width: calc(100% - 1.5em);
+  width: calc(100% - 4em);
   z-index: 100; }
   .atomic header a {
     color: #fff; }
@@ -66,8 +66,12 @@ code {
     float: right;
     font-family: 'Source Code Pro', monospace; }
 
-#atoms h3 {
-  margin-bottom: 0; }
+#atoms .atoms-heading {
+  font-size: 2.125em; }
+
+#atoms .atoms-sub-heading {
+  font-size: 1.5em;
+  margin-bottom: .25em; }
 
 #atoms hr {
   border: 0;
@@ -75,9 +79,6 @@ code {
   border-top: 2px solid rgba(0, 0, 0, 0.1);
   border-bottom: 2px solid rgba(255, 255, 255, 0.3);
   margin-top: 0; }
-
-#atoms ul {
-  margin: 0 0 3em 0; }
 
 #atoms .color {
   list-style-type: none;
